# server/src/main/kotlin/com/diegoferreiracaetano/dlearn/domain/models/ProfileDomainData.kt
@@ -1,13 +1,6 @@
 package com.diegoferreiracaetano.dlearn.domain.models
 
+import com.diegoferreiracaetano.dlearn.domain.user.User
 import kotlinx.serialization.Serializable
 
-@Serializable
-data class ProfileDomainData(
-    val name: String,
-    val email: String,
-    val imageUrl: String,
-    val isPremium: Boolean,
-    val language: String,
-    val country: String
-)
+typealias ProfileDomainData = User
